--- a/cr-reloader/_locales/en/messages.json
+++ b/cr-reloader/_locales/en/messages.json
@@ -1,6 +1,6 @@
 {
   "appName": {
-    "message": "Crx Reloader",
+    "message": "Cr Reloader",
     "description": "The name of the application"
   },
   "appDescription": {
