--- a/cr-reloader-backend/_locales/en/messages.json
+++ b/cr-reloader-backend/_locales/en/messages.json
@@ -1,6 +1,6 @@
 {
   "appName": {
-    "message": "Crx Reloader Backend",
+    "message": "Cr Reloader Backend",
     "description": "The name of the application"
   },
   "appDescription": {
